Bug 313360. Don't worry if a non-EEXIST error occurred placing the obselete symlink lock; FF1.0 couldn't have locked it either. r+sr=brendan